--- a/templates/index.html
+++ b/templates/index.html
@@ -110,6 +110,24 @@
                 </div>
             </li>
 			
+			            <!-- Nav Item - Performance enginering Menu -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities3"
+                    aria-expanded="true" aria-controls="collapseUtilities3">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Performance Engineering</span>
+                </a>
+                <div id="collapseUtilities3" class="collapse" aria-labelledby="headingUtilities"
+                    data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="{{ url_for('Generate_TestCases')}}">Generate performance test cases</a>
+
+
+                    </div>
+                </div>
+            </li>
+			
+			
 			            <!-- Nav Item - Run the bank Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#RTB"
@@ -120,9 +138,9 @@
                 <div id="RTB" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="Generate.html">Find root cause</a>
-						<a class="collapse-item" href="Generate.html">Code Converter</a>
-                        <a class="collapse-item" href="Generate.html">Code Optimization</a>
+                        <a class="collapse-item" href="Generate.html">Locate Originating Cause</a>
+						<a class="collapse-item" href="Generate.html">Code Migration</a>
+                        <a class="collapse-item" href="Generate.html">Code Fine-Tuning</a>
                         <a class="collapse-item" href="{{ url_for('Code_Documentation')}}">NexGen Code Documentation</a>
                     </div>
                 </div>
