--- a/templates/Generate_APITestCases.html
+++ b/templates/Generate_APITestCases.html
@@ -591,8 +591,9 @@ document.getElementById('clearBtn').addEventListener('click', function () {
 <script>
 document.getElementById('downloadBtn').addEventListener('click', function() {
     var outputText = document.getElementById('outputTextArea').value;
-    downloadFile(outputText, 'output.txt');
-  });
+	var selectedLanguage = document.getElementById('languageDropdown').value;
+    downloadFile(outputText, selectedLanguage + ".txt");
+});
 
   // File Download Function
 function downloadFile(content, fileName) {
